
API Changes
---------------------

* LUCENE-10325: Facets API extended to support getTopFacets. (Yuting Gan)

* LUCENE-10482: Allow users to create their own DirectoryTaxonomyReaders with empty taxoArrays instead of letting the
  taxoEpoch decide. Add a test case that demonstrates the inconsistencies caused when you reuse taxoArrays on older
  checkpoints. (Gautam Worah)

New Features
---------------------

* LUCENE-10539: Return a stream of completions from FSTCompletion. (Dawid Weiss)

* LUCENE-10385: Implement Weight#count on IndexSortSortedNumericDocValuesRangeQuery
  to speed up computing the number of hits when possible. (Lu Xugang, Luca Cavanna, Adrien Grand)

* LUCENE-10422: Monitor Improvements: `Monitor` can use a custom `Directory` 
  implementation. `Monitor` can be created with a readonly `QueryIndex` in order to
  have readonly `Monitor` instances. (Niko Usai)

* LUCENE-10456: Implement rewrite and Weight#count for MultiRangeQuery
  by merging overlapping ranges . (Jianping Weng)

* LUCENE-10444: Support alternate aggregation functions in association facets. (Greg Miller)

Improvements
---------------------

* LUCENE-10229: return -1 for unknown offsets in ExtendedIntervalsSource. Modify highlighting to
  work properly with or without offsets. (Dawid Weiss)

* LUCENE-10494: Implement method to bulk add all collection elements to a PriorityQueue.
  (Bauyrzhan Sakhariyev)

* LUCENE-10484: Add support for concurrent random sampling by calling
  RandomSamplingFacetsCollector#createManager. (Luca Cavanna)

* LUCENE-10467: Throws IllegalArgumentException for Facets#getAllDims and Facets#getTopChildren
  if topN <= 0. (Yuting Gan)

* LUCENE-9848: Correctly sort HNSW graph neighbors when applying diversity criterion (Mayya
  Sharipova, Michael Sokolov)

Optimizations
---------------------

* LUCENE-10452: Hunspell: call checkCanceled less frequently to reduce the overhead (Peter Gromov)
